--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
+
+@font-face {
+    font-family: 'MyCustomFont';
+    src: url('https://fonts.googleapis.com/css2?family=Cairo:wght@200&display=swap');
+    font-weight: 900;
+    font-style: normal;
+  }
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+font-family: "MyCustomFont" , sans-serif;
+   
 }
 
 body{
